<resources>
    <string name="app_name">Let\'s GO</string>
    <string name="slogan">Если путешествовать, то только вместе!</string>
    <string name="login">Войти</string>
    <string name="registration">Registration</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="age">Ваш возраст</string>
    <string name="city">Город</string>
    <string name="phone">Телефон</string>
    <string name="email">E-mail</string>
    <string name="car">Машина</string>
    <string name="num_car">Номер машины</string>
    <string name="age_driver">Стаж вождения</string>
    <string name="password">Пароль</string>
    <string name="confPassword">Подтвердите пароль</string>
    <string name="sms_auth">Отправить SMS</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="add_driver_route">Добавить маршрут (водитель)</string>
    <string name="add_passenger_route">Добавить маршрут (поссажир)</string>

</resources>