<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/thred_clr">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/second_clr">
            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    android:src="@drawable/barrow"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Личный кабинет"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </FrameLayout>
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/notfound"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Федор"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Петров"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Брянск"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_driver"/>
        <TextView

            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12 лет"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kap.moral@mail.ru"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <TextView

            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+7920-832-5254"/>

    </LinearLayout>

</ScrollView>