<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/thred_clr">

    <FrameLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second_clr">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/backArrow"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Регистрация"/>
        </LinearLayout>
    </FrameLayout>
    <View

        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

    <TextView
        android:textSize="16dp"
        android:textColor="@color/first_clr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>


        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textColor="@color/first_clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"/>
        <EditText
            android:id="@+id/surname_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textColor="@color/first_clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
        <EditText
            android:id="@+id/age_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textColor="@color/first_clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>
        <EditText
            android:id="@+id/city_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>


        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textColor="@color/first_clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/phone_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>


        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textColor="@color/first_clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Зарегистрироваться"
            android:background="@drawable/fon_for_corners_btn"/>

    </LinearLayout>

</LinearLayout>