<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/thred_clr">


        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_user"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView

            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/surname_user"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView

            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Откуда"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/start_point"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Куда"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/end_point"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_driver"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/driver_age"
            android:inputType="number"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_car"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_car"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/num_car"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/num_phone"
            android:inputType="number"
            android:maxLength="14"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Цена за пассажира"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/price"
            android:inputType="number"
            android:maxLength="14"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Количество мест"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/num_mest"
            android:inputType="number"
            android:maxLength="2"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Дата и время отъезда"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/date_Start"
            android:inputType="text"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_add"
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Создать поездку"
    android:background="@drawable/btn_for_login"
    android:textColor="@color/thred_clr"
    android:layout_marginBottom="8dp"
    />

    </LinearLayout>

</ScrollView>