<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/auth"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="50sp"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_marginBottom="20dp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:background="@color/fon_for_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/startPoint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:hint="Start point"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/endPoint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:hint="End point"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/countPassengers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:hint="Count passengers"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/coastRoute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:hint="Coast route"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/timeRoute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:hint="Travel time"
                        android:importantForAutofill="no"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/dateRoute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:hint="Date of travel"
                        android:importantForAutofill="no"
                        android:inputType="date" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_log"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="28dp"
                        android:layout_marginRight="28dp"
                        android:background="@drawable/btn_for_login"
                        android:onClick="onClick"
                        android:text="@string/add_driver_route" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
